// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits accepts a custom className 1`] = `
<div
  className="cvi-infinitehits MyCustomInfiniteHits"
>
  <ul
    className="cvi-infinitehits-list"
  >
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":0}
      </div>
    </li>
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":1}
      </div>
    </li>
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":2}
      </div>
    </li>
  </ul>
  <button
    className="cvi-infinitehits-loadMore cvi-infinitehits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;

exports[`InfiniteHits accepts a hitComponent prop 1`] = `
<div
  className="cvi-infinitehits"
>
  <ul
    className="cvi-infinitehits-list"
  >
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":0}
      </div>
    </li>
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":1}
      </div>
    </li>
    <li
      className="cvi-infinitehits-item"
    >
      <div>
        {"id":2}
      </div>
    </li>
  </ul>
  <button
    className="cvi-infinitehits-loadMore cvi-infinitehits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;
